Final Project Push

--- a/client/sevencrystals.html
+++ b/client/sevencrystals.html
@@ -37,7 +37,7 @@
 	</div>
     <div id="info">
       <label id="gameKey">Game Key: </label>
-      <button id="logoutBut"><a href="https://farrp1m3.herokuapp.com/logout">Log out</a></button>
+      <button id="logoutBut">Logout</button>
     </div>
 	
 	<section id="audioControls">
